--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar-brand
+.navbar-brand-my
 {
     height: 62px;
     color: #F6F8E2;
@@ -12,6 +12,12 @@
 
 .navbar-light{
     background-color: #9CCD62 !important;
+}
+
+.container-fluid{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
